<?xml version="1.0"?>
<package format="2">
  <name>cart_sim</name>
  <version>0.0.0</version>
  <description>AUTONOMOUS CART SIMULATION PLATFORM</description>


  <maintainer email="truckercy@hotmail.com">Cagdas Yaman</maintainer>


  <license>NONE</license>

  <depend>gazebo_ros</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>python-rospkg</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
